# platform.core.security.askuser

./: CMakeLists.txt
common/: Translator.cpp  Translator.h  Types.h
packaging/: askuser.spec
plugin/service/: CapacityCache.h
src/: CMakeLists.txt
src/agent/: CMakeLists.txt
src/agent/log/: .alog.h.swp  alog.cpp  alog.h
src/agent/main/: .CynaraTalker.cpp.swp  Agent.cpp  Agent.h  CMakeLists.txt  CynaraRequest.h  CynaraTalker.cpp  CynaraTalker.h  NotificationTalker.cpp  NotificationTalker.h  Request.h  Response.h  main.cpp
src/agent/notification-daemon/: AskUserTalker.cpp  AskUserTalker.h  CMakeLists.txt  GuiRunner.cpp  GuiRunner.h  main.cpp
src/agent/notification-daemon/po/: pl.po
src/agent/po/: CMakeLists.txt  en.po  pl.po
src/agent/popup-bin/: CMakeLists.txt  popup.cpp  popup.h
src/agent/ui/: AskUIInterface.h  AskUINotificationBackend.cpp  AskUINotificationBackend.h  AskUINotificationBackend_2.cpp  AskUINotificationBackend_2.h  AskUIPopupBackend.cpp  AskUIPopupBackend.h  NotificationBackend.cpp  NotificationBackend.h  popup-runner.cpp  popup-runner.h  serialization.cpp  serialization.h
src/common/: CMakeLists.txt  CynaraException.h  Exception.cpp  Exception.h  SupportedTypes.h  Translator.cpp  Translator.h  Types.h  log.cpp  log.h  notification-ipc.h
src/common/config/: Limits.cpp  Limits.h  Path.cpp  Path.h
src/common/containers/: ConcurrentQueue.h
src/common/exception/: CynaraException.h  ErrnoException.h  Exception.h
src/common/log/: alog.cpp  alog.h  log.h
src/common/socket/: SelectRead.cpp  SelectRead.h  Socket.cpp  Socket.h
src/common/translator/: Translator.cpp  Translator.h
src/common/types/: AgentErrorMsg.cpp  AgentErrorMsg.h  CynaraRequest.h  NotificationRequest.h  NotificationResponse.h  Protocol.h  RequestData.h  RequestId.h  Response.h  SupportedTypes.h
src/common/util/: SafeFunction.cpp  SafeFunction.h  safe_function.h
src/daemon/: CMakeLists.txt  CynaraTalker.cpp  CynaraTalker.h  NotificationTalker.cpp  NotificationTalker.h  main.cpp
src/notification-daemon/: AskUserTalker.cpp  AskUserTalker.h  CMakeLists.txt  GuiRunner.cpp  GuiRunner.h  main.cpp
src/notification-daemon/po/: CMakeLists.txt  en.po
src/plugin/: CMakeLists.txt
src/plugin/client/: ClientPlugin.cpp
src/plugin/service/: CapacityCache.h  ServicePlugin.cpp
systemd/: CMakeLists.txt  askuser-notification.service  askuser.service
test/: CMakeLists.txt  askuser-test.sh  main.cpp
test/client/: CMakeLists.txt
test/client/src/: main.c
test/common/: translator.cpp
test/daemon/: .notificationTalker.cpp.swp  notificationTalker.cpp
test/tools/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp
tests/common/: exception.cpp  translator.cpp
tests/daemon/: notificationTalker.cpp
