SET(TEST_PATH ${PROJECT_SOURCE_DIR}/test/)

PKG_CHECK_MODULES(TEST_DEP
    cynara-client
    cynara-admin
)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/src
)

SET(TEST_SOURCES
    ${TEST_PATH}/main.cpp
   )

ADD_DEFINITIONS(${TEST_DEP_CFLAGS})

ADD_EXECUTABLE(${TARGET_TEST} ${TEST_SOURCES})

SET_TARGET_PROPERTIES(${TARGET_TEST} PROPERTIES
    COMPILE_FLAGS
    -fpie
)

TARGET_LINK_LIBRARIES(${TARGET_TEST}
    ${TEST_DEP_LIBRARIES}
    -pie
)

INSTALL(TARGETS ${TARGET_TEST} DESTINATION ${BIN_INSTALL_DIR})
