SET(COMMON_PATH ${ASKUSER_PATH}/common)

PKG_CHECK_MODULES(ASKUSER_COMMON_DEP
    cynara-plugin
)

INCLUDE_DIRECTORIES(SYSTEM
    ${ASKUSER_DEP_INCLUDE_DIRS}
    )

SET(COMMON_SOURCES
    ${COMMON_PATH}/log.cpp
    ${COMMON_PATH}/Translator.cpp
)

ADD_DEFINITIONS("-fvisibility=default")
ADD_DEFINITIONS(${ASKUSER_COMMON_DEP_CFLAGS})

ADD_LIBRARY(${TARGET_ASKUSER_COMMON} SHARED ${COMMON_SOURCES})

INSTALL(TARGETS ${TARGET_ASKUSER_COMMON} DESTINATION ${LIB_INSTALL_DIR})
