SET(DAEMON_PATH ${PROJECT_SOURCE_DIR}/src/daemon/)

PKG_CHECK_MODULES(ASKUSERD_DEP
    cynara-creds-socket
    cynara-agent
    cynara-plugin
)

INCLUDE_DIRECTORIES(
    ${ASKUSER_PATH}
)

SET(ASKUSERD_SOURCES
    ${DAEMON_PATH}/main.cpp
    ${DAEMON_PATH}/NotificationTalker.cpp
    ${DAEMON_PATH}/CynaraTalker.cpp
   )

ADD_DEFINITIONS(${ASKUSERD_DEP_CFLAGS})

ADD_EXECUTABLE(${TARGET_ASKUSERD} ${ASKUSERD_SOURCES})

SET_TARGET_PROPERTIES(${TARGET_ASKUSERD} PROPERTIES
    COMPILE_FLAGS
    -fpie
)

TARGET_LINK_LIBRARIES(${TARGET_ASKUSERD}
    ${ASKUSERD_DEP_LIBRARIES}
    -pie
)

INSTALL(TARGETS ${TARGET_ASKUSERD} DESTINATION ${BIN_INSTALL_DIR})
