SET(NOTIF_PATH ${PROJECT_SOURCE_DIR}/src/notification-daemon/)

PKG_CHECK_MODULES(ASKUSER_NOTIFICATION_DEP
    elementary
    cynara-agent
    libsystemd-daemon
    security-manager
    security-privilege-manager
)

INCLUDE_DIRECTORIES(
    ${ASKUSER_PATH}
    ${COMMON_PATH}
)

SET(ASKUSER_NOTIFICATION_SOURCES
    ${NOTIF_PATH}/main.cpp
    ${NOTIF_PATH}/GuiRunner.cpp
    ${NOTIF_PATH}/AskUserTalker.cpp
   )

ADD_DEFINITIONS(${ASKUSER_NOTIFICATION_DEP_CFLAGS})

ADD_EXECUTABLE(${TARGET_ASKUSER_NOTIFICATION} ${ASKUSER_NOTIFICATION_SOURCES})

SET_TARGET_PROPERTIES(${TARGET_ASKUSER_NOTIFICATION} PROPERTIES
    COMPILE_FLAGS
    -fpie
)

TARGET_LINK_LIBRARIES(${TARGET_ASKUSER_NOTIFICATION}
    ${ASKUSER_NOTIFICATION_DEP_LIBRARIES}
    ${TARGET_ASKUSER_COMMON}
    -pie
)

INSTALL(TARGETS ${TARGET_ASKUSER_NOTIFICATION} DESTINATION ${BIN_INSTALL_DIR})

ADD_SUBDIRECTORY(po)
