SET(NOTIF_PATH ${PROJECT_SOURCE_DIR}/src/notification-daemon/)

PKG_CHECK_MODULES(ASKUSER_NOTIFICATION_DEP
    elementary
    libsystemd-daemon
    cynara-creds-socket
    cynara-agent
    cynara-plugin
    security-privilege-manager
    security-manager
)

INCLUDE_DIRECTORIES(
    ${ASKUSER_PATH}
    ${COMMON_PATH}
)

SET(ASKUSER_NOTIFICATION_SOURCES
    ${PROJECT_SOURCE_DIR}/src/common/Exception.cpp
    ${PROJECT_SOURCE_DIR}/src/common/log.cpp
    ${PROJECT_SOURCE_DIR}/src/common/Translator.cpp
    ${NOTIF_PATH}/main.cpp
    ${NOTIF_PATH}/GuiRunner.cpp
    ${NOTIF_PATH}/AskUserTalker.cpp
   )

ADD_DEFINITIONS(${ASKUSER_NOTIFICATION_DEP_CFLAGS})

ADD_EXECUTABLE(${TARGET_ASKUSER_NOTIFICATION} ${ASKUSER_NOTIFICATION_SOURCES})

SET_TARGET_PROPERTIES(${TARGET_ASKUSER_NOTIFICATION} PROPERTIES
    COMPILE_FLAGS
    -fpie
)

TARGET_LINK_LIBRARIES(${TARGET_ASKUSER_NOTIFICATION}
    ${ASKUSER_NOTIFICATION_DEP_LIBRARIES}
    -pie
)

INSTALL(TARGETS ${TARGET_ASKUSER_NOTIFICATION} DESTINATION ${BIN_INSTALL_DIR})
