SET(PLUGIN_PATH ${ASKUSER_PATH}/plugin)

PKG_CHECK_MODULES(SERVICE_DEP
    cynara-plugin
    )

INCLUDE_DIRECTORIES(
    ${SERVICE_DEP_INCLUDE_DIRS}
    ${ASKUSER_PATH}/common
    )

SET(SERVICE_PLUGIN_SOURCES
    ${PLUGIN_PATH}/service/ServicePlugin.cpp
    )

SET(CLIENT_PLUGIN_SOURCES
    ${PLUGIN_PATH}/client/ClientPlugin.cpp
    )

ADD_DEFINITIONS("-fvisibility=default")

ADD_LIBRARY(${TARGET_PLUGIN_SERVICE} SHARED ${SERVICE_PLUGIN_SOURCES})
ADD_LIBRARY(${TARGET_PLUGIN_CLIENT} SHARED ${CLIENT_PLUGIN_SOURCES})

TARGET_LINK_LIBRARIES(${TARGET_PLUGIN_SERVICE}
    ${TARGET_ASKUSER_COMMON}
    ${TARGET_ASKUSER_COMMON_DEPS}
    )

TARGET_LINK_LIBRARIES(${TARGET_PLUGIN_CLIENT}
    ${TARGET_ASKUSER_COMMON}
    ${TARGET_ASKUSER_COMMON_DEPS}
    )

INSTALL(TARGETS ${TARGET_PLUGIN_SERVICE}
    DESTINATION ${LIB_INSTALL_DIR}/cynara/plugin/service/)
INSTALL(TARGETS ${TARGET_PLUGIN_CLIENT}
    DESTINATION ${LIB_INSTALL_DIR}/cynara/plugin/client/)
