SET(DAEMON_PATH ${PROJECT_SOURCE_DIR}/src/agent/main/)

PKG_CHECK_MODULES(ASKUSERD_DEP
    REQUIRED
    cynara-agent
    cynara-creds-socket
    libsystemd-daemon
    libsystemd-journal
)

INCLUDE_DIRECTORIES(
    ${ASKUSER_PATH}
    ${ASKUSER_PATH}/common/
)

SET(ASKUSERD_SOURCES
    ${DAEMON_PATH}/CynaraTalker.cpp
    ${DAEMON_PATH}/main.cpp
    ${DAEMON_PATH}/NotificationTalker.cpp
   )

ADD_DEFINITIONS(${ASKUSERD_DEP_CFLAGS})

ADD_EXECUTABLE(${TARGET_ASKUSERD} ${ASKUSERD_SOURCES})

SET_TARGET_PROPERTIES(${TARGET_ASKUSERD} PROPERTIES
    COMPILE_FLAGS
    -fpie
)

TARGET_LINK_LIBRARIES(${TARGET_ASKUSERD}
    ${TARGET_ASKUSER_COMMON}
    ${ASKUSERD_DEP_LIBRARIES}
    -pie
)

INSTALL(TARGETS ${TARGET_ASKUSERD} DESTINATION ${BIN_INSTALL_DIR})
